--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//WebRoot/FoodAdd.jsp=UTF-8
 encoding//WebRoot/Restaurant.jsp=UTF-8
 encoding//WebRoot/Review.jsp=UTF-8
 encoding//WebRoot/restaurantEdit.jsp=UTF-8
