--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -13,6 +13,10 @@
     <servlet-name>Food1</servlet-name>
     <servlet-class>servlet.Food1</servlet-class>
   </servlet>
+  <servlet>
+    <servlet-name>FoodEditServlet</servlet-name>
+    <servlet-class>servlet.FoodEditServlet</servlet-class>
+  </servlet>
   <servlet-mapping>
     <servlet-name>CheckAccount</servlet-name>
     <url-pattern>/login</url-pattern>
@@ -20,5 +24,9 @@
   <servlet-mapping>
     <servlet-name>Food1</servlet-name>
     <url-pattern>/Food</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>FoodEditServlet</servlet-name>
+    <url-pattern>/FoodEdit</url-pattern>
   </servlet-mapping>
 </web-app>
